# pyvortex

./: pyproject.toml  readme.md
Examples/: FEDAlphaWithSlantedBoxNoJoyStick.vxscene
Examples/FEDAlpha/: FED Alpha.vxmechanism  FED Alpha_ControlInterface.vxcontrol
Examples/FEDAlpha/Physics/: FED Alpha_Assembly_Body now.vxpart  FED Alpha_Assembly_Passenger.vxpart
Examples/FEDAlpha/Physics/Flat Ground/: Flat Ground.vxmechanism  Flat Ground_Assembly.vxassembly
Examples/FEDAlpha/Scripts/: AbsoluteSink.py  Camera_Controller.py  Chassis_Collision.py  CruiseController.py  DirectionController.py  Interpolate.py  Logging.py  TWheel_Feedback.py
Examples/FEDAlpha/Tables/: Automatic Transmission Ratios.csv  Engine Torque Table - N - Fuel.csv  Engine Torque Table.csv
Examples/Physics/: FED Alpha_Assembly.vxassembly  FED Alpha_Assembly_Body.vxpart
Examples/Physics/Flat Ground/Scripts/: Set Material.py
Examples/ProfilingDynamicsStepTime/: benchmarking_tests_profiler.py
Examples/ReferenceCart/: materials.vxmaterials
Examples/ReferenceCart/Flat Ground/: Flat GroundPy3.vxmechanism  Flat Ground_Assembly.vxassembly  Flat Ground_Assembly_Part.vxpart  Ground.vxgraphicgallery
Examples/ReferenceCart/Flat Ground/Scripts/: Set Material_Py3.py
Examples/ReferenceCart/Outputs/: output.csv
Examples/ReferenceCart/ReferenceCart/: Cart.vxassembly  CartMech.vxmechanism
Examples/ReferenceCart/Scripts/: VHL Logger.py  pyproject.toml
Examples/Scripts/: Camera_Manager.py  Passengers_Mass.py  Signal_Interpreter.py  SoilParamControl.py  VHL Logger.py  Vehicle Control.py  camera.py
Examples/Tables/: Automatic Transmission Ratios - N.csv  Automatic Transmission Ratios - Old.csv  Engine Torque Table - N - Fuel.xlsx  Engine Torque Table - N.csv
Examples/Vehicle Systems/Components/Automatic Transmission/: Automatic Transmission.vxassembly  Automatic Transmission_Shaft.vxpart
Examples/Vehicle Systems/Components/Chassis/: Chassis Properties.py  Chassis_Chassis Part.vxpart
modules/: content_loading.py  data_collection.py
pyvortex/: __init__.py  vortex_classes.py  vortex_env.py  vortex_interface.py  vortex_logger.py
tests/: SimApp.py  multiple_envs.py  test.py  test_VortexEnv.py
tests/assets/: config.vxc  config_eval.vxc  config_no_disp.vxc
(+40 files in other folders)
